--- a/templates/base.html
+++ b/templates/base.html
@@ -28,6 +28,9 @@
 <!-- custom javascript -->
 <script src="{% static 'js/script.js' %}" type="text/javascript"></script>
 
+<!-- PayPal SDK -->
+<script src="https://www.paypal.com/sdk/js?client-id=AV1HVwU0AY7gEaakHbn08ts9wCUjvhSnOL23JkPZaDzJtxWFgNdoDw5lqUd8ClN0vMfM2IZHy3D79ows&currency=USD"></script>
+
 <script type="text/javascript">
 /// some script
 
