--- a/templates/store/checkout.html
+++ b/templates/store/checkout.html
@@ -8,122 +8,123 @@
     <div class="container">
     
     <!-- ============================ COMPONENT 1 ================================= -->
+    <form action="{% url 'place_order' %}" method="POST">
+    {% csrf_token %}
     <div class="row">
         <aside class="col-lg-6">
-    <div class="card">
-        <div class="card-body">
-            <h4 class="card-title mb-4">Billing Address</h4>
-            <form action="" method="POST">
-                {% csrf_token %}
-                <div class="form-row">
-                    <div class="col form-group">
-                        <label for="first_name">First name</label>
-                        <input type="text" class="form-control" name="first_name" required>
-                    </div> <!-- form-group end.// -->
-                    <div class="col form-group">
-                        <label for="last_name">Last name</label>
-                        <input type="text" class="form-control" name="last_name" required>
-                    </div> <!-- form-group end.// -->
-                </div> <!-- form-row end.// -->
-                <div class="form-row">
-                    <div class="col form-group">
-                        <label for="email">Email</label>
-                        <input type="email" class="form-control" name="email" required>
-                    </div> <!-- form-group end.// -->
-                    <div class="col form-group">
-                        <label for="phone_number">Phone Number</label>
-                        <input type="text" class="form-control" name="phone_number" required>
-                    </div> <!-- form-group end.// -->
-                </div> <!-- form-row end.// -->
-                <div class="form-row">
-                    <div class="col form-group">
-                        <label for="">Address Line 1</label>
-                        <input type="text" class="form-control" name="address_line1" required>
-                    </div> <!-- form-group end.// -->
-                    <div class="col form-group">
-                        <label for="">Address Line 2</label>
-                        <input type="text" class="form-control" name="address_line_2">
-                    </div> <!-- form-group end.// -->
-                </div> <!-- form-row end.// -->
-                <div class="form-row">
-                    <div class="col form-group">
-                        <label for="">Country</label>
-                        <input type="text" class="form-control" name="country" required>
-                    </div> <!-- form-group end.// -->
-                    <div class="col form-group">
-                        <label for="">City</label>
-                        <input type="text" class="form-control" name="city" required>
-                    </div> <!-- form-group end.// -->
-                    <div class="col form-group">
-                        <label for="">State</label>
-                        <input type="text" class="form-control" name="state" required>
-                    </div> <!-- form-row end.// -->
-                </div>
-                <div class="form-row">
-                    <div class="col form-group">
-                        <label for="">Order Notes</label>
-                        <textarea row="2" class="form-control" name="order_notes" placeholder="Notes about your order, e.g. special notes for delivery."></textarea>
-                    </div> <!-- form-group end.// -->
-                </div> <!-- form-group end.// -->
-            
-        </div> <!-- card-body.// -->
-    </div> <!-- card.// -->
-    
-        </aside> <!-- col.// -->
-        <aside class="col-lg-6">
-    
             <div class="card">
-            <div class="card-body">
-                <table class="table table-borderless table-shopping-cart">
-    <thead class="text-muted">
-    <tr class="small text-uppercase">
-      <th scope="col">Product</th>
-      <th scope="col" width="120">Quantity</th>
-      <th scope="col" width="120">Price</th>
-    </tr>
-    </thead>
-    <tbody>
-    {% for cart_item in cart_items %}
-    <tr>
-        <td>
-            <figure class="itemside align-items-center">
-                <div class="aside"><img src="{{ cart_item.product.image.url }}" class="img-sm"></div>
-                <figcaption class="info">
-                    <a href="{{ cart_item.product.get_url }}" class="title text-dark">{{ cart_item.product.product_name }}</a>
-                    <p class="text-muted small">
-                        {% if cart_item.variations.all %}
-                            {% for item in cart_item.variations.all %}
-                            {{ item.variation_category | capfirst }}: {{ item.variation_value | capfirst }} <br>
+                <div class="card-body">
+                    <h4 class="card-title mb-4">Billing Address</h4>
+
+                    <div class="form-row">
+                        <div class="col form-group">
+                            <label for="first_name">First name</label>
+                            <input type="text" class="form-control" name="first_name" required>
+                        </div> 
+                        <div class="col form-group">
+                            <label for="last_name">Last name</label>
+                            <input type="text" class="form-control" name="last_name" required>
+                        </div>
+                    </div>
+
+                    <div class="form-row">
+                        <div class="col form-group">
+                            <label for="email">Email</label>
+                            <input type="email" class="form-control" name="email" required>
+                        </div>
+                        <div class="col form-group">
+                            <label for="phone">Phone Number</label>  <!-- FIXED -->
+                            <input type="text" class="form-control" name="phone" required>
+                        </div>
+                    </div>
+
+                    <div class="form-row">
+                        <div class="col form-group">
+                            <label for="address_line_1">Address Line 1</label> <!-- FIXED -->
+                            <input type="text" class="form-control" name="address_line_1" required>
+                        </div>
+                        <div class="col form-group">
+                            <label for="address_line_2">Address Line 2</label>
+                            <input type="text" class="form-control" name="address_line_2">
+                        </div>
+                    </div>
+
+                    <div class="form-row">
+                        <div class="col form-group">
+                            <label for="country">Country</label>
+                            <input type="text" class="form-control" name="country" required>
+                        </div>
+                        <div class="col form-group">
+                            <label for="city">City</label>
+                            <input type="text" class="form-control" name="city" required>
+                        </div>
+                        <div class="col form-group">
+                            <label for="state">State</label>
+                            <input type="text" class="form-control" name="state" required>
+                        </div>
+                    </div>
+
+                    <div class="form-row">
+                        <div class="col form-group">
+                            <label for="order_note">Order Notes</label> <!-- FIXED -->
+                            <textarea rows="2" class="form-control" name="order_note"
+                                placeholder="Notes about your order, e.g. special notes for delivery."></textarea>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </aside>
+
+        <aside class="col-lg-6">
+            <div class="card">
+                <div class="card-body">
+                    <table class="table table-borderless table-shopping-cart">
+                        <thead class="text-muted">
+                            <tr class="small text-uppercase">
+                                <th scope="col">Product</th>
+                                <th scope="col" width="120">Quantity</th>
+                                <th scope="col" width="120">Price</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {% for cart_item in cart_items %}
+                            <tr>
+                                <td>
+                                    <figure class="itemside align-items-center">
+                                        <div class="aside"><img src="{{ cart_item.product.image.url }}" class="img-sm"></div>
+                                        <figcaption class="info">
+                                            <a href="{{ cart_item.product.get_url }}" class="title text-dark">{{ cart_item.product.product_name }}</a>
+                                            <p class="text-muted small">
+                                                {% if cart_item.variations.all %}
+                                                    {% for item in cart_item.variations.all %}
+                                                        {{ item.variation_category|capfirst }}: {{ item.variation_value|capfirst }} <br>
+                                                    {% endfor %}
+                                                {% endif %}
+                                            </p>
+                                        </figcaption>
+                                    </figure>
+                                </td>
+                                <td><label>{{ cart_item.quantity }}</label></td>
+                                <td>
+                                    <div class="price-wrap">
+                                        <var class="price">${{ cart_item.subtotal }}</var>
+                                        <small class="text-muted">${{ cart_item.product.price }} each</small>
+                                    </div>
+                                </td>
+                            </tr>
                             {% endfor %}
-                        {% endif %}
-                    </p>
-                </figcaption>
-            </figure>
-        </td>
-        <td> 
-            <label for="">{{ cart_item.quantity }}</label>
-        </td>
-        <td> 
-            <div class="price-wrap"> 
-                <var class="price">${{ cart_item.subtotal }}</var> 
-                <small class="text-muted"> ${{ cart_item.product.price }} each </small> 
-            </div> <!-- price-wrap .// -->
-        </td>
-    </tr>
-    {% endfor %}
-    </tbody>
-    </table>
-                <button type="submit" class="btn btn-primary btn-block" name="submit"> Place Order </button>
-                <a href="{% url 'store' %}" class="btn btn-light btn-block">Continue Shopping</a>
-                </form>
-            </div> <!-- card-body.// -->
-            </div> <!-- card.// -->
-            
-    
-    </aside> <!-- col.// -->
-    
-    
-    </div> <!-- row.// -->
+                        </tbody>
+                    </table>
+
+                    <button type="submit" class="btn btn-primary btn-block" name="submit">Place Order</button>
+                    <a href="{% url 'store' %}" class="btn btn-light btn-block">Continue Shopping</a>
+                </div>
+            </div>
+        </aside>
+        </div>
+    </form>
+
     <!-- ============================ COMPONENT 1 END .// ================================= -->
     
     </div> <!-- container .//  -->
